@@ -1,5 +1,5 @@
 <HTML>
-<HEAD><TITLE>RTEMS @SERVER@ Test Page</TITLE></HEAD>
+<HEAD><TITLE>RTEMS GoAhead Test Page</TITLE></HEAD>
 <BODY BGCOLOR="FFFFFF">
 <center>
 <H1>RTEMS GoAhead Test Page</H1>
