@@ -1,0 +1,22 @@
+<HTML>
+<HEAD><TITLE>RTEMS Mongoose Server Test Page</TITLE></HEAD>
+<BODY BGCOLOR="FFFFFF">
+<center>
+<H1>RTEMS Mongoose Test Page</H1>
+</center>
+<A HREF="http://www.rtems.org">
+  <IMG align=center BORDER=0 SRC="rtems_logo.jpg" ALT="RTEMS"> </A>
+
+<P><big>Congratulations, you have successfully loaded your first page
+from the Mongoose webserver running on RTEMS.</big></P>
+</P>
+This RTEMS program includes some dynamic web pages.  Check
+out the following links for examples:
+</P>
+<UL>
+  <LI><A HREF="queries?action=cpuuse_report">CPU Usage -- Report</LI>
+  <LI><A HREF="queries?action=cpuuse_reset">CPU Usage -- Reset</LI>
+  <LI><A HREF="queries?action=stackuse_report">Stack Usage -- Report</LI>
+</UL>
+
+</BODY></HTML>
