@@ -29,6 +29,5 @@ out the following links for examples:
   <LI><A HREF="queries?cpuuse_reset">CPU Usage -- Reset</LI>
   <LI><A HREF="queries?stackuse_report">Stack Usage -- Report</LI>
 </UL>
-</big>
 
 </BODY></HTML>
